--- a/homepage/templates/homepage_base.html
+++ b/homepage/templates/homepage_base.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>Shop</title>
+	<title>{% block title %}{% endblock %}</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="{% static "assets/img/favicon.png" %}">
@@ -78,13 +78,13 @@
 										<li><a href="shop.html">Shop</a></li>
 									</ul>
 								</li> {% endcomment %}
-								<li><a href="news.html">News</a>
+								<li><a href="/news">News</a>
 									{% comment %} <ul class="sub-menu">
 										<li><a href="news.html">News</a></li>
 										<li><a href="single-news.html">Single News</a></li>
 									</ul>
 								</li> {% endcomment %}
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="/contact">Contact</a></li>
 								<li><a href="/shop">Shop</a>
 									{% comment %} <ul class="sub-menu">
 										<li><a href="shop.html">Shop</a></li>
@@ -95,7 +95,7 @@
 								</li>
 								<li>
 									<div class="header-icons">
-										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+										<a class="shopping-cart" href="/cart_page"><i class="fas fa-shopping-cart"></i></a>
 										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
 										<a class="" href="/account"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
 											<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
