--- a/templates/firstpage.html
+++ b/templates/firstpage.html
@@ -60,7 +60,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="/login/">Home</a>
+								<li class="current-list-item"><a href="/login">Home</a>
 									{% comment %} <ul class="sub-menu">
 										<li><a href="index.html">Static Home</a></li>
 										<li><a href="index_2.html">Slider Home</a></li>
@@ -96,8 +96,8 @@
 								<li>
 									<div class="header-icons">
 										<a class="shopping-cart" href="/login"><i class="fas fa-shopping-cart"></i></a>
-										<a class="mobile-hide search-bar-icon" href="login"><i class="fas fa-search"></i></a>
-										<a class="" href="login"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+										<a class="mobile-hide search-bar-icon" href="/login"><i class="fas fa-search"></i></a>
+										<a class="" href="/login"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
 											<path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
 										  </svg></i></a>
 									</div>
