--- a/shop/templates/single_product.html
+++ b/shop/templates/single_product.html
@@ -19,9 +19,9 @@ SINGLE SHOP
                     {% if img is None %}<img src="{{single_product.prodect_image1.url}}" alt=""> {% elif img == 1 %} <img src=" {{single_product.prodect_image1.url}}" alt=""> {% elif img == 2%}<img src=" {{single_product.prodect_image2.url}}" alt=""> {% elif img == 3%} <img src="{{single_product.prodect_image3.url}}" alt=""> {% endif %}
                 </div>
                 <div class='multi_img'>
-                    {% if single_product.prodect_image1 %} <a href="/single_prodect{{ single_product.id}}/"><img class="multi_image_item" src=" {{single_product.prodect_image1.url}}" alt=""></a> {% endif %}
-                    {% if single_product.prodect_image2 %} <a href="/single_prodect_img/{{ single_product.id}}/{{2}}/"><img class="multi_image_item" src=" {{single_product.prodect_image2.url}}" alt=""></a>{% endif %}
-                    {% if single_product.prodect_image3 %} <a href="/single_prodect_img/{{ single_product.id}}/{{3}}/"><img class="multi_image_item" src=" {{single_product.prodect_image3.url}}" alt=""></a>{% endif %}
+                    {% if single_product.prodect_image1 %} <a href="/single_prodect{{ single_product.id}}"><img class="multi_image_item" src=" {{single_product.prodect_image1.url}}" alt=""></a> {% endif %}
+                    {% if single_product.prodect_image2 %} <a href="/single_prodect_img/{{ single_product.id}}/{{2}}"><img class="multi_image_item" src=" {{single_product.prodect_image2.url}}" alt=""></a>{% endif %}
+                    {% if single_product.prodect_image3 %} <a href="/single_prodect_img/{{ single_product.id}}/{{3}}"><img class="multi_image_item" src=" {{single_product.prodect_image3.url}}" alt=""></a>{% endif %}
                </div>
             </div>
             <div class="col-md-7">
@@ -30,10 +30,20 @@ SINGLE SHOP
                     <p class="single-product-pricing"><span>Per Kg</span> {{single_product.price}} ₹</p>
                     <p>{{single_product.description}}</p>
                     <div class="single-product-form">
-                        <form action="index.html">
-                            <input type="number" min='0' placeholder="0"><p class="single-product-pricing"></p>
+                        <form action="add_cart{{ single_product.id }}/" method="POST">
+                            {% csrf_token %}
+                            <input type="number" min='0' placeholder="0" name='quantity'><p class="single-product-pricing"></p>
+
+                            {% comment %} <a class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a> {% endcomment %}
+                            <button style="border: 0ch;border: transparent;" type="submit"><a class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a></button>
                         </form>
-                        <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+                        {% if messages %}
+                    <ul >
+                      {% for messages in messages %}
+                      <h3 style="color: orangered ;  " >{{messages}}</h3>
+                      {% endfor %}
+                     </ul>
+                     {% endif %}
                         <p><strong>Categories: </strong>{{cate.name}}</p>
                         <p><strong>variant: </strong>{{var.variant_name}}</p>
                     </div>
